@@ -12,48 +12,14 @@ using Microsoft.Win32;
 
 namespace eXeMeL.Model
 {
-  internal static class SettingsIO
+  public enum SyntaxHighlightingStyle 
   {
-    public static void SaveSettings(SettingsBase settings)
-    {
-      using (var s = new MemoryStream())
-      {
-        using (var registryKey = RegistryAccess.OpenRegistryKey())
-        {
-          var serializer = new DataContractJsonSerializer(settings.GetType());
-          serializer.WriteObject(s, settings);
+    [Description("Bright")]
+    Bright,
 
-          var value = Encoding.UTF8.GetString(s.ToArray());
-
-          registryKey.SetValue("Settings", value);
-        }
-      }
-    }
-
-
-
-    public static T LoadSettings<T>()
-      where T : SettingsBase, new()
-    {
-      try
-      {
-        using (var registryKey = RegistryAccess.OpenRegistryKey())
-        {
-          var value = registryKey.GetValue("Settings") as string;
-          using (var memoryStream = new MemoryStream(Encoding.UTF8.GetBytes(value)))
-          {
-            var serializer = new DataContractJsonSerializer(typeof(T));
-            return serializer.ReadObject(memoryStream) as T;
-          }
-        }
-      }
-      catch
-      {
-        return new T();
-      }
-    }
+    [Description("Earthy")]
+    Earthy 
   }
-
 
 
   [DataContract]
@@ -77,7 +43,8 @@ namespace eXeMeL.Model
   [DataContract]
   public class Settings : SettingsBase
   {
-    public const double DEFAULT_EDITOR_FONT_SIZE = 14.667;
+    private SyntaxHighlightingStyle _SyntaxHighlightingStyle;
+    public const double DEFAULT_EDITOR_FONT_SIZE = 16;
 
 
     private bool _WrapEditorText;
@@ -112,13 +79,22 @@ namespace eXeMeL.Model
     }
 
 
+    [DataMember]
+    public SyntaxHighlightingStyle SyntaxHighlightingStyle
+    {
+      get { return _SyntaxHighlightingStyle; }
+      set { _SyntaxHighlightingStyle = value; NotifyPropertyChanged("SyntaxHighlightingStyle"); }
+    }
+
+
 
     public Settings()
       : base()
     {
       this.ShowEditorLineNumbers = true;
-      this.WrapEditorText = false;
+      this.WrapEditorText = true;
       this.EditorFontSize = DEFAULT_EDITOR_FONT_SIZE;
+      this.SyntaxHighlightingStyle = Model.SyntaxHighlightingStyle.Earthy;
     }
   }
 }
