@@ -4,11 +4,14 @@
   xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
   xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+  xmlns:local="clr-namespace:eXeMeL.View"
+  xmlns:model="clr-namespace:eXeMeL.Model"
   xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
   mc:Ignorable="d" 
   d:DesignHeight="300" d:DesignWidth="300"
   Foreground="White"
-  Width="350">
+  Width="350"
+  Name="ControlRoot">
 
   <UserControl.Resources>
     <Style x:Key="SettingGroupHeaderStyle" TargetType="TextBlock">
@@ -29,6 +32,7 @@
         <RowDefinition Height="Auto"/>
         <RowDefinition Height="Auto"/>
         <RowDefinition Height="Auto"/>
+        <RowDefinition Height="Auto"/>
 
       </Grid.RowDefinitions>
       
@@ -43,7 +47,7 @@
       <MahApps:ToggleSwitch Grid.Column="0" Grid.Row="1" IsChecked="{Binding ShowEditorLineNumbers}" Header="Line Numbers" Foreground="White"/>
       <MahApps:ToggleSwitch Grid.Column="2" Grid.Row="1" IsChecked="{Binding WrapEditorText}" Header="Wrap Editor Text" Foreground="White"/>
       
-      <Grid Grid.Column="0" Grid.ColumnSpan="3" Grid.Row="2" Margin="10,20,0,0">
+      <Grid Grid.Column="0" Grid.ColumnSpan="3" Grid.Row="2" Margin="10,20,0,20">
         <Grid.ColumnDefinitions>
           <ColumnDefinition Width="Auto"/>
           <ColumnDefinition/>
@@ -56,12 +60,34 @@
         <TextBlock Grid.Column="0" Grid.Row="0" Text="Font Size" FontFamily="Segoe UI" FontSize="16" Margin="0,0,10,0" Opacity="0.65"/>
         <Slider Grid.Column="1" Grid.Row="0" Value="{Binding EditorFontSize}" Minimum="12" Maximum="30" Focusable="False"/>
 
-        <Button Grid.Column="1" Grid.Row="1" x:Name="ResetFontSizeButton" Content="Reset Font Size" HorizontalAlignment="Right" Margin="0,5,0,0" Foreground="{DynamicResource WhiteBrush}" Click="ResetFontSizeButton_Click"/>
+        <Button Grid.Column="1" Grid.Row="1" x:Name="ResetFontSizeButton" Content="Reset Font Size" HorizontalAlignment="Right" Margin="0,5,0,0" Click="ResetFontSizeButton_Click"/>
       </Grid>
-      
-      
 
-      <TextBlock Grid.Column="0" Grid.ColumnSpan="3" Grid.Row="3" Margin="0,40,0,0" FontFamily="Segoe UI" FontSize="18" Opacity="0.9">
+      <TextBlock 
+        Grid.Row="3" Grid.Column="0"
+        Text="Syntax Highlighting Scheme" 
+        Style="{StaticResource SettingGroupHeaderStyle}"
+        TextWrapping="Wrap"
+        />
+
+
+      <ComboBox 
+        Grid.Row="3" Grid.Column="2"
+        ItemsSource="{Binding Source={local:Enumeration {x:Type model:SyntaxHighlightingStyle}}}" 
+        DisplayMemberPath="Description" 
+        SelectedValue="{Binding SyntaxHighlightingStyle}"  
+        SelectedValuePath="Value"  
+        FontSize="14"
+        Height="30"/>
+
+      <TextBlock 
+        Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="3" 
+        Text="{Binding CurrentVersion, ElementName=ControlRoot, StringFormat='Current Version: {0}'}" 
+        Style="{StaticResource SettingGroupHeaderStyle}"
+        Margin="0,40,0,0"
+        />
+
+      <TextBlock Grid.Row="5" Grid.Column="0" Grid.ColumnSpan="3" Margin="0,40,0,0" Style="{StaticResource SettingGroupHeaderStyle}">
         <Run Text="Makes use of "/>
         <LineBreak/>
         <Run Text="  AvalonEdit"/>
@@ -71,6 +97,8 @@
         <Run Text="  MVVMFoundation"/>
         <LineBreak/>
         <Run Text="  MahApps"/>
+        <LineBreak/>
+        <Run Text="  ModernUIIcons.com"/>
       </TextBlock>
     </Grid>
   </ScrollViewer>
